# C267_HW4

./: CSR_MPI.cpp  README.md  distributed_pcg.cpp
Trying/: CMakeLists.txt  CSR_MPI.cpp  cg_solver  cg_solver.cpp  copy_CSR_MPI.cpp  distributed_pcg.cpp  new.cpp  new1.cpp  test_csr.cpp  testing  testing_CSR_MPI
